--- a/docs/theory/readme.tex
+++ b/docs/theory/readme.tex
@@ -1067,27 +1067,14 @@ Note that similarly
 \end{alignat}
 
 
-We start from the weak form in Eq.~\eqref{eq:static:weak:final}, that has been obtained strictly without specifying a coordinate system. Our point of departure is thus
-\begin{equation}
-  \int\limits_\Omega
-    \big[\, \vec{\nabla} \vec{\phi}(\vec{x}) \,\big] : \bm{\sigma}(\vec{x}) \;
-  \mathrm{d}\Omega
-  =
-  \int\limits_\Gamma
-    \vec{\phi}(\vec{x}) \cdot \vec{t}(\vec{x}) \;
-  \mathrm{d}\Gamma
-  \qquad
-  \forall \; \vec{\phi}(\vec{x}) \in \mathbb{R}^d
-\end{equation}
-
-The next step is to discretize using Eq.~\eqref{eq:discretization} thereby we have to be a be careful. We begin by making Eq.~\eqref{eq:discretization} more specific:
+We begin by making Eq.~\eqref{eq:discretization} more specific:
 \begin{equation}
   \phi_r (\vec{x}) \vec{e}_r + \phi_\theta (\vec{x}) \vec{e}_\theta + \phi_z (\vec{x}) \vec{e}_z
   \approx
   \sum\limits_{i=1}^{n}
-  \phi_{i,r} N_i (\vec{x}) \vec{e}_r +
-  \phi_{i,\theta}  N_i (\vec{x}) \vec{e}_\theta +
-  \phi_{i,z}  N_i (\vec{x}) \vec{e}_z
+  N_i (\vec{x}) \phi_{i,r}       \vec{e}_r      +
+  N_i (\vec{x}) \phi_{i,\theta}  \vec{e}_\theta +
+  N_i (\vec{x}) \phi_{i,z}       \vec{e}_z
 \end{equation}
 We can also evaluate the discretized gradient
 \begin{align}
@@ -1100,9 +1087,9 @@ We can also evaluate the discretized gradient
   \vec{e}_z \frac{\partial}{\partial z}
   \bigg)
   \bigg(
-  \phi_{i,r} N_i (\vec{x}) \vec{e}_r +
-  \phi_{i,\theta}  N_i (\vec{x}) \vec{e}_\theta +
-  \phi_{i,z}  N_i (\vec{x}) \vec{e}_z
+  N_i (\vec{x}) \phi_{i,r}       \vec{e}_r      +
+  N_i (\vec{x}) \phi_{i,\theta}  \vec{e}_\theta +
+  N_i (\vec{x}) \phi_{i,z}       \vec{e}_z
   \bigg)
   \\
   &=
@@ -1116,7 +1103,7 @@ We can also evaluate the discretized gradient
   + \phi_{i,r     } \frac{1}{r} \frac{\partial N_i }{\partial \theta} \vec{e}_\theta \vec{e}_r
   + \phi_{i,r     } \frac{1}{r} N_i (\vec{x}) \vec{e}_\theta \vec{e}_\theta
   + \phi_{i,\theta} \frac{1}{r} \frac{\partial N_i }{\partial \theta} \vec{e}_\theta \vec{e}_\theta
-  - \phi_{i,r} \frac{1}{r} N_i (\vec{x}) \vec{e}_r \vec{e}_\theta
+  - \phi_{i,\theta} \frac{1}{r} N_i (\vec{x}) \vec{e}_r \vec{e}_\theta
   + \phi_{i,z     } \frac{1}{r} \frac{\partial N_i }{\partial \theta} \vec{e}_\theta \vec{e}_z
   \nonumber
   \\
@@ -1131,8 +1118,6 @@ Which we can denote in short as
   \approx
   \sum\limits_{i=1}^{n}
   \mathcal{B}_i (\vec{x}) \cdot \vec{\phi}_i
-  =
-  \underline{\mathcal{B}}^\mathsf{T} \cdot \vec{\phi}_m
 \end{equation}
 where the non-zero components of the third order $\mathcal{B}_i$ read
 \begin{alignat}{3}
@@ -1141,7 +1126,7 @@ where the non-zero components of the third order $\mathcal{B}_i$ read
   \mathcal{B}_{i,z      r      r     } &=             \frac{\partial N_i}{\partial z}
   \nonumber
   \\
-  \mathcal{B}_{i,r      \theta r     } &= - \frac{1}{r} N_i (\vec{x})  & \qquad
+  \mathcal{B}_{i,r      \theta \theta} &= - \frac{1}{r} N_i (\vec{x})  & \qquad
   \mathcal{B}_{i,\theta \theta r     } &=   \frac{1}{r} N_i (\vec{x})  & \qquad
   \nonumber
   \\
